sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: sonarr-cm
        image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        name: sonarr
        ports:
        - containerPort: 8989
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: sonarr-config
        - mountPath: /data
          name: media
      volumes:
        - persistentVolumeClaim:
            claimName: sonarr
          name: sonarr-config
        - name: media
          nfs:
            server: 10.0.0.100
            path: /volume1/media
