sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: servarr
spec:
  ports:
    - name: "web"
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
  type: ClusterIP
