sonarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: servarr
  labels:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.monroe.gg`)
      priority: 10
      services:
        - name: sonarr
          port: 8989
    - kind: Rule
      match: Host(`sonarr.monroeshindelar.com`)
      priority: 10
      services:
        - name: sonarr
          port: 8989
  tls:
    certResolver: porkbun
